# modern-c-project

./: .gitignore  BattleCity.drawio  README.md  t --count HEAD
BattleCity/: BattleCity.sln
BattleCity/BattleCity/: BattleCity.vcxproj  BattleCity.vcxproj.filters  Bomb.cpp  Bomb.cppm  CharacterSelector.cpp  CharacterSelector.cppm  ShopInterface.cppm  Tile.cpp  Tile.cppm  app.cpp  app.cppm  app.h  bomb.h  bullet.cpp  bullet.cppm  characters.cpp  characters.cppm  characters.h  entity.cpp  entity.cppm  entity.h  main.cpp  map.cpp  map.cppm  movable.cppm  movable.h  player.cpp  player.cppm  player.h  powerup.cpp  powerup.cppm  user.cpp  user.cppm  user.h
BattleCityClient/: BattleCityClient.sln
BattleCityClient/BattleCity/: BattleCity.vcxproj  BattleCity.vcxproj.filters  CharacterSelection.cpp  CharacterSelection.h  ClickableLabel.h  battlecitystart.cpp  battlecitystart.h  circle.cpp  circle.h  httpmanager.cpp  httpmanager.h  loginwindow.cpp  loginwindow.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.qrc  mainwindow.ui  map.json  map.txt  registerwindow.cpp  registerwindow.h  resources.h  shop.cpp  shop.h
BattleCityClient/BattleCityClient/: BattleCityClient.vcxproj  CMakeLists.txt  ClickableLabel.h  battlecitystart.cpp  battlecitystart.h  httpmanager.cpp  loginwindow.cpp  loginwindow.h  main.cpp  mainwindow.cpp  mainwindow.h  registerwindow.cpp  registerwindow.h
BattleCityClient/ClientRequests/: ClientRequests.cpp
BattleCityClient/PasswordEncryption/: PasswordEncryption.vcxproj.filters  passwordEncryption.cpp
BattleCityClient/resources/: BombBall_Type1.aseprite  BombBullet_Type1.aseprite  GhostBall_Type1.aseprite  GhostBullet_Type1.aseprite  Sprite-0001.aseprite  UnbreakableWall_Type1.aseprite  ZombieBall.aseprite
BattleCityServer/: BattleCityServer.sln
BattleCityServer/BattleCityServer/: BattleCityServer.vcxproj  BattleCityServer.vcxproj.filters  Game.h  Tile.cpp  Timer.h  app.h  bomb.cpp  bomb.h  bullet.cpp  bullet.h  characters.cpp  characters.h  database.cpp  database.h  entity.cpp  entity.h  game.cpp  main.cpp  map.cpp  map.h  movable.cpp  movable.h  movement_request.h  player.cpp  player.h  playermovement.cpp  playermovement.h  powerup.cpp  powerup.h  request_handler.h  routing.cpp  tile.h  (+7 more)
(+21 files in other folders)
